@@ -2,6 +2,7 @@ lintian-brush (0.100) UNRELEASED; urgency=medium
 
   * Drop ognibuild to recommends; it's only used by debianize.
   * Read field lists from lintian.
+  * Add support for fixing some things in debcargo.toml.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 02 Mar 2021 14:59:45 +0000
 
